# fourier_transform_benchmark

./: CMakeLists.txt  README.md
benchmarks/: fft_benchmark_20260116T111451Z.json  fft_benchmark_20260116T111651Z.json  fft_benchmark_20260116T113539Z.json  fft_benchmark_20260116T140729Z.json  fft_benchmark_20260127T121324Z.json
cpp/src/: cooley_tukey_fft.h  cuda_cooley_tukey.h  cuda_cooley_tukey_device.cu  cuda_cooley_tukey_device.cuh  fftw_wrapper.h  fourier_transform.h  naive_dft.h  openmp_cooley_tukey_fft.h
cpp/src/cuda/: cu_fft.cuh  cuda_cooley_tukey.h  cuda_cooley_tukey_device.cu
cpp/tests/: ft_analytical_tests.cpp  ft_backends.h  ft_performance_tests.cpp  ft_random_tests.cpp  test_utils.h
python/: get_latest_stamp.py  plot_benchmark.py
